@@ -1,3 +1,6 @@
+4/25/2008
+	- Add support for the DHCID record.
+
 4/18/2008
 	- The prior change to allow creating Zones from AXFR-style IXFR
 	  ZoneTransferIn responses didn't work.
